k8s/overlays/platform-prod/images-pull-always.patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: platform-api
spec:
  template:
    spec:
      containers:
        - name: platform-api
          imagePullPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: platform-console
spec:
  template:
    spec:
      containers:
        - name: platform-console
          imagePullPolicy: Always
